--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build:
       context: ./backend/CryptoApi
       dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
 
 
   web:
