feat: add CoinGecko service and models for coin prices and chart data
- Implemented CoinGeckoService to fetch current prices and chart data for supported cryptocurrencies.
- Created ChartDataPoint and ChartResponse models for chart data representation.
- Added CoinPrice model to represent individual coin price details.
- Developed API client methods for fetching prices and chart data.
- Introduced CoinLayout and OverviewPage components for displaying coin information and charts.
- Implemented CoinPage component to show detailed price history and analytics for selected coins.
- Added data structure for coins with relevant information and summaries.

--- a/backend/CryptoApi/appsettings.json
+++ b/backend/CryptoApi/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "CoinGecko": {
+    "ApiKey": "CG-6GCjCgSq3qniCCv6Qv2G1zQF"
+  },
   "Mongo": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "crypto_dashboard"
